change button labels, add back buttons throughout

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   <meta property="og:image" content="Image">
   <meta property="og:url" content="URL"/>
   <meta property="og:type" content="website">
-  <meta property="og:title" content="black-history"/>
-  <title>black-history</title>
+  <meta property="og:title" content="womens-history"/>
+  <title>womens-history</title>
   <link type="text/css" href="style/project.css" rel="stylesheet" />
   <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="style/ie.css" />
